crash while switching camera in animation rendering (only when motion blur is on in eevee render settings ) #78452

Closed
opened 2020-06-30 06:57:44 +02:00 by paresh patel · 14 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce GTX 1050 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 451.48

Blender Version
Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-06-29 21:12, hash: f28e59bd74

Short description of error
blender crashes every time while switching camera in animation rendering , crash occurs only when motion blur option is on in eevee render settings.

Exact steps for others to reproduce the error
step 1 - place two or more camera in scene
step 2 - place marker in timeline and bind camera to markers
step 3- enable motion blur in eevee render settings
step 4 - select file format as FFmpeg video for animation
step 5 - start animation
result - crash while rendering frame reaches second camera in timeline.

here is a .blend file ( example file has crane camera but i also checked with normal camera )
camera crash.blend

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce GTX 1050 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 451.48 **Blender Version** Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-06-29 21:12, hash: `f28e59bd74` **Short description of error** blender crashes every time while switching camera in animation rendering , crash occurs only when motion blur option is on in eevee render settings. **Exact steps for others to reproduce the error** step 1 - place two or more camera in scene step 2 - place marker in timeline and bind camera to markers step 3- enable motion blur in eevee render settings step 4 - select file format as FFmpeg video for animation step 5 - start animation result - crash while rendering frame reaches second camera in timeline. here is a .blend file ( example file has crane camera but i also checked with normal camera ) [camera crash.blend](https://archive.blender.org/developer/F8654678/camera_crash.blend)
Author

Added subscriber: @paresh_patel

Added subscriber: @paresh_patel

#79236 was marked as duplicate of this issue

#79236 was marked as duplicate of this issue

#78717 was marked as duplicate of this issue

#78717 was marked as duplicate of this issue

#78545 was marked as duplicate of this issue

#78545 was marked as duplicate of this issue

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

I can confirm the crash in the attached file.

Exception thrown: read access violation.
pinfo was 0xFFFFFFFFFFFFFFEF.
>	blender.exe!EEVEE_lightprobes_cache_init(EEVEE_ViewLayerData * sldata, EEVEE_Data * vedata) Line 323	C

 	blender.exe!EEVEE_render_cache_init(EEVEE_ViewLayerData * sldata, EEVEE_Data * vedata) Line 180	C
 	blender.exe!eevee_render_to_image(void * vedata, RenderEngine * engine, RenderLayer * render_layer, const rcti * rect) Line 504	C
 	blender.exe!DRW_render_to_image(RenderEngine * engine, Depsgraph * depsgraph) Line 1827	C
 	blender.exe!RE_engine_render(Render * re, int do_all) Line 880	C
 	blender.exe!do_render_3d(Render * re) Line 1138	C
 	blender.exe!do_render(Render * re) Line 1217	C
 	blender.exe!do_render_composite(Render * re) Line 1355	C
 	blender.exe!do_render_all_options(Render * re) Line 1617	C
 	blender.exe!RE_RenderAnim(Render * re, Main * bmain, Scene * scene, ViewLayer * single_layer, Object * camera_override, int sfra, int efra, int tfra) Line 2591	C
 	blender.exe!render_startjob(void * rjv, short * stop, short * do_update, float * progress) Line 642	C
 	blender.exe!do_job_thread(void * job_v) Line 398	C
 	blender.exe!tslot_thread_start(void * tslot_p) Line 222	C
 	[External Code]	
I can confirm the crash in the attached file. ``` Exception thrown: read access violation. pinfo was 0xFFFFFFFFFFFFFFEF. ``` ``` > blender.exe!EEVEE_lightprobes_cache_init(EEVEE_ViewLayerData * sldata, EEVEE_Data * vedata) Line 323 C blender.exe!EEVEE_render_cache_init(EEVEE_ViewLayerData * sldata, EEVEE_Data * vedata) Line 180 C blender.exe!eevee_render_to_image(void * vedata, RenderEngine * engine, RenderLayer * render_layer, const rcti * rect) Line 504 C blender.exe!DRW_render_to_image(RenderEngine * engine, Depsgraph * depsgraph) Line 1827 C blender.exe!RE_engine_render(Render * re, int do_all) Line 880 C blender.exe!do_render_3d(Render * re) Line 1138 C blender.exe!do_render(Render * re) Line 1217 C blender.exe!do_render_composite(Render * re) Line 1355 C blender.exe!do_render_all_options(Render * re) Line 1617 C blender.exe!RE_RenderAnim(Render * re, Main * bmain, Scene * scene, ViewLayer * single_layer, Object * camera_override, int sfra, int efra, int tfra) Line 2591 C blender.exe!render_startjob(void * rjv, short * stop, short * do_update, float * progress) Line 642 C blender.exe!do_job_thread(void * job_v) Line 398 C blender.exe!tslot_thread_start(void * tslot_p) Line 222 C [External Code] ```
Contributor

Added subscriber: @RedMser

Added subscriber: @RedMser
Member

Added subscriber: @Pitchoune

Added subscriber: @Pitchoune

Added subscribers: @amshiv, @iss

Added subscribers: @amshiv, @iss

This issue was referenced by 4f59e4bddc

This issue was referenced by 4f59e4bddcb0c06e441adf68a5f252a4e5b4b260

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Clément Foucault self-assigned this 2020-08-06 23:06:54 +02:00

Added subscriber: @ChristophWerner

Added subscriber: @ChristophWerner

Small additional Info: Blender is also crashing at camera marker change, while grease pencil cache is calculating.
I'll post a seperate bug entry for this asap, but it seem to fit here, too.

Version: 3.0.1, branch: master, commit date: 2022-01-25 17:19, hash: dc2d180181, type: release
build date: 2022-01-26, 01:46:57
platform: 'Windows-10-10.0.22000-SP0' (Windows 11)
renderer: 'NVIDIA GeForce RTX 3090/PCIe/SSE2'
vendor: 'NVIDIA Corporation'
version: '4.5.0 NVIDIA 512.15'

Small additional Info: Blender is also crashing at camera marker change, while grease pencil cache is calculating. I'll post a seperate bug entry for this asap, but it seem to fit here, too. Version: 3.0.1, branch: master, commit date: 2022-01-25 17:19, hash: dc2d18018171, type: release build date: 2022-01-26, 01:46:57 platform: 'Windows-10-10.0.22000-SP0' (Windows 11) renderer: 'NVIDIA GeForce RTX 3090/PCIe/SSE2' vendor: 'NVIDIA Corporation' version: '4.5.0 NVIDIA 512.15'
Thomas Dinges added this to the 2.90 milestone 2023-02-08 16:26:17 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
8 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#78452
No description provided.