Fix T78452 EEVEE: Motion Blur: Crash when using camera switching

This was caused by the ViewLayer being freed with all its
engine data.