source/blender/draw/engines/eevee/eevee_engine.c
@@ -79,11 +79,6 @@ static void eevee_engine_init(void *ved)
   GPU_framebuffer_ensure_config(&fbl->main_color_fb,
                                 {GPU_ATTACHMENT_NONE, GPU_ATTACHMENT_TEXTURE(txl->color)});
 
-  if (sldata->common_ubo == NULL) {
-    sldata->common_ubo = DRW_uniformbuffer_create(sizeof(sldata->common_data),
-                                                  &sldata->common_data);
-  }
-
   /* `EEVEE_renderpasses_init` will set the active render passes used by `EEVEE_effects_init`.
    * `EEVEE_effects_init` needs to go second for TAA. */
   EEVEE_renderpasses_init(vedata);
@@ -459,6 +454,8 @@ static void eevee_render_to_image(void *vedata,
   }
   EEVEE_PrivateData *g_data = ved->stl->g_data;
 
+  EEVEE_render_modules_init(vedata, engine, depsgraph);
+
   int initial_frame = CFRA;
   int steps = max_ii(1, scene->eevee.motion_blur_steps);
   int time_steps_tot = (do_motion_blur) ? steps : 1;
@@ -481,9 +478,10 @@ static void eevee_render_to_image(void *vedata,
       }
       else {
         EEVEE_motion_blur_step_set(ved, MB_PREV);
-        RE_engine_frame_set(engine, floorf(time_prev), fractf(time_prev));
+        DRW_render_set_time(engine, depsgraph, floorf(time_prev), fractf(time_prev));
+        EEVEE_render_modules_init(vedata, engine, depsgraph);
+        sldata = EEVEE_view_layer_data_ensure();
 
-        EEVEE_render_view_sync(vedata, engine, depsgraph);
         EEVEE_render_cache_init(sldata, vedata);
 
         DRW_render_object_iter(vedata, engine, depsgraph, EEVEE_render_cache);
@@ -497,9 +495,10 @@ static void eevee_render_to_image(void *vedata,
     /* Next motion step. */
     if (do_motion_blur_fx) {
       EEVEE_motion_blur_step_set(ved, MB_NEXT);
-      RE_engine_frame_set(engine, floorf(time_next), fractf(time_next));
+      DRW_render_set_time(engine, depsgraph, floorf(time_next), fractf(time_next));
+      EEVEE_render_modules_init(vedata, engine, depsgraph);
+      sldata = EEVEE_view_layer_data_ensure();
 
-      EEVEE_render_view_sync(vedata, engine, depsgraph);
       EEVEE_render_cache_init(sldata, vedata);
 
       DRW_render_object_iter(vedata, engine, depsgraph, EEVEE_render_cache);
@@ -513,10 +512,11 @@ static void eevee_render_to_image(void *vedata,
     {
       if (do_motion_blur) {
         EEVEE_motion_blur_step_set(ved, MB_CURR);
-        RE_engine_frame_set(engine, floorf(time_curr), fractf(time_curr));
+        DRW_render_set_time(engine, depsgraph, floorf(time_curr), fractf(time_curr));
+        EEVEE_render_modules_init(vedata, engine, depsgraph);
+        sldata = EEVEE_view_layer_data_ensure();
       }
 
-      EEVEE_render_view_sync(vedata, engine, depsgraph);
       EEVEE_render_cache_init(sldata, vedata);
 
       DRW_render_object_iter(vedata, engine, depsgraph, EEVEE_render_cache);
